removed study 2 from paper

--- a/output/papers/latex-stuff/librarySweAcoust.bib
+++ b/output/papers/latex-stuff/librarySweAcoust.bib
@@ -143,6 +143,15 @@
   langid = {english}
 }
 
+@article{chesworth2003,
+  title = {Effect of Phonetic Context on Women's Vowel Area},
+  author = {Chesworth, J. and Cot{\'e}, K. and Shaw, C. and Williams, S. and Hodge, W.},
+  year = {2003},
+  journal = {Canadian Acoustics/Acoustique Canadienne},
+  volume = {31},
+  pages = {20--21}
+}
+
 @incollection{chuang2021,
   title={Analyzing phonetic data with generalized additive mixed models},
   author={Chuang, Yu-Ying and Fon, Janice and Papakyritsis, Ioannis and Baayen, Harald},
@@ -971,6 +980,26 @@
   keywords = {Phonology,Swedish language},
   annotation = {OCLC: ocn866836612}
 }
+
+@article{robb-chen2009,
+  title = {Is /h/ Phonetically Neutral?},
+  author = {Robb, Michael P. and Chen, Yang},
+  year = {2009},
+  month = nov,
+  journal = {Clinical Linguistics \& Phonetics},
+  volume = {23},
+  number = {11},
+  pages = {842--855},
+  publisher = {{Taylor \& Francis}},
+  issn = {0269-9206},
+  doi = {10.3109/02699200903247896},
+  urldate = {2022-11-09},
+  abstract = {Use of /h/ in the phrase, `Say /hVC/ again' has been tacitly assumed to provide a neutral phonetic context in which to study the articulatory characteristics of speech either preceding or following /h/ articulation. Yet, assessment of the stability or neutrality of /h/ has gone untested. The current study sought to determine whether articulation of /h/ differs according to sex and language accent, as well as to examine its influence on subsequent vowel articulation. Selected acoustic features of /hVC/ were measured in 40 speakers of American English (AE) and 40 speakers of Mandarin-accented English (MAE). Results of an analysis of /h/ duration revealed no sex differences within each language group, however considerable variation was found according to accented vs unaccented English. Clear sex differences were found for the production of /ɦ/, occurring more often among male speakers regardless of language variety. Considerable variation in production of /ɦ/ was found between language groups. Analysis of vowel formant frequencies immediately following /h/ articulation indicated minimal coarticulatory effects for both AE and MAE speakers. The present results appear to support the suggestion that /h/ is not exclusively sex-linked and may indeed vary according to non-biological factors. In spite of these variations, /h/ articulation appears to have a negligible influence on neighbouring vowel articulation.},
+  pmid = {19891524},
+  keywords = {Acoustic analysis,English,fricative,Mandarin,sex differences,speech production measurement,voice},
+  file = {/Users/anpe7128/Zotero/storage/ZKREPMP6/Robb and Chen - 2009 - Is h phonetically neutral.pdf}
+}
+
 
 @article{scarborough2012,
   title = {Lexical similarity and speech production: Neighborhoods for nonwords},
