--- a/output/papers/latex-stuff/librarySweAcoust.bib
+++ b/output/papers/latex-stuff/librarySweAcoust.bib
@@ -143,6 +143,17 @@
   langid = {english}
 }
 
+@book{bruce2010,
+  author={Bruce, G{\"o}sta},
+  title={V{\aa}r fonetiska geografi : om svenskans accenter, melodi och uttal {[Our phonetic geography: about the accents, melody and pronunciation of Swedish]}},
+  publisher={Studentlitteratur},
+  address={Lund},
+  year={2010},
+  edition={f{\"o}rsta upplagan},
+  ISBN={9789144050539},
+  keywords={Svenska spr{\aa}ket Uttal Prosodi Dialekter},
+}
+
 @article{chesworth2003,
   title = {Effect of Phonetic Context on Women's Vowel Area},
   author = {Chesworth, J. and Cot{\'e}, K. and Shaw, C. and Williams, S. and Hodge, W.},
@@ -387,6 +398,15 @@
   pages={203--219},
   year={2013},
   publisher={Wiley Online Library}
+}
+
+@book{gross2018,
+  title={Mapping vowels: Variation and change in the speech of Gothenburg adolescents},
+  author={Gross, Johan},
+  series = {Doctoral Theses from University of Gothenburg},
+  publisher = {University of Gothenburg},
+  address = {Gothenburg},
+  year={2018}
 }
 
 @article{gross2020,
@@ -647,6 +667,16 @@
   author = {Raymond D. Kent and Houri K. Vorperian}
 }
 
+@book{kotsinas1994,
+  author={Kotsinas, Ulla-Britt},
+  title={Ungdomsspr{\aa}k {[Youth language]}},
+  publisher={Hallgren {\&} Fallgren},
+  address={Uppsala},
+  year={1994},
+  ISBN={9173827185},
+  keywords={Svenska spr{\aa}ket Talspr{\aa}k Spr{\aa}ksociologi Slang Svordomar Ungdomsspr{\aa}k},
+}
+
 @book{kotsinas1995,
   title = {Dialekt {[Dialect]}},
   author = {Kotsinas, Ulla-Britt},
@@ -866,6 +896,14 @@
   file = {/Users/anpe7128/Zotero/storage/HC8I4ZAC/Nearey and Assmann - 1986 - Modeling the role of inherent spectral change in v.pdf}
 }
 
+@article{nilsson2021,
+  title={New and old social meanings in urban and rural Sweden},
+  author={Nilsson, Jenny and Wenner, Lena and Leinonen, Therese and Thorselius, Eva},
+  journal={Urban Matters},
+  pages={179},
+  year={2021}
+}
+
 @inproceedings{pelzer-boersma2019,
   title = {{{Diphthongization in three regional varieties of Swedish}}},
   booktitle = {Proceedings of the 19th {{International Congress}} of {{Phonetic Sciences}}},
@@ -911,7 +949,7 @@
   publisher = {manuscript; Stockholm University}
 }
 
-@article{Peterson1952,
+@article{peterson-barney1952,
   title = {Control Methods Used in a Study of the Vowels},
   author = {Peterson, Gordon E and Barney, Harold L},
   year = {1952},
