--- a/output/papers/SI.Rmd
+++ b/output/papers/SI.Rmd
@@ -426,6 +426,10 @@ rm(m.sep.I, m.sep.Y, m.sep.U, m.sep.E, m.sep.Ä, m.sep.ÄR, m.sep.Ö, m.sep.ÖR,
 ### Category separability including F0 {#sec:SI-F0-separability}
 While F0 is not considered an important cue to vowel identity in itself, it is known to have an indirect effect of vowel perception. To assess the effect of including F0 for the distinction of long and short vowel pairs, a category separability index including F0 was calculated alongside F1-F2. Figure XX suggests that ...
 
+For the F1-F3 and F2-F3 cue spaces, there seems to be two main groups for which either cue combination generates the lowest separability index. For the [`r linguisticsdown::cond_cmpl("ʉː")`] - [`r linguisticsdown::cond_cmpl("ɵ")`], [`r linguisticsdown::cond_cmpl("ɑː")`] - [`r linguisticsdown::cond_cmpl("a")`], [`r linguisticsdown::cond_cmpl("oː")`] - [`r linguisticsdown::cond_cmpl("ɔ")`], [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("ɪ")`], and [`r linguisticsdown::cond_cmpl("uː")`] - [`r linguisticsdown::cond_cmpl("ʊ")`] vowel pairs, the F1-F3 cue combination generates the lowest separability, which would seem to suggest the informativity of F2 for distinguishing between these pairs. For the second group, mainly consisting of allophones to /`r linguisticsdown::cond_cmpl("ɛ")`/ and /`r linguisticsdown::cond_cmpl("ø")`/: [`r linguisticsdown::cond_cmpl("eː")`] - [`r linguisticsdown::cond_cmpl("ɛ")`], [`r linguisticsdown::cond_cmpl("ɛː")`] - [`r linguisticsdown::cond_cmpl("ɛ")`], [`r linguisticsdown::cond_cmpl("æː")`] - [`r linguisticsdown::cond_cmpl("æ")`], [`r linguisticsdown::cond_cmpl("øː")`] - [`r linguisticsdown::cond_cmpl("ø")`] and [`r linguisticsdown::cond_cmpl("œː")`] - [`r linguisticsdown::cond_cmpl("œ")`], the F2-F3 cue combination produces the lowest separability, presumably highlighting the importance of F1. Interestingly, the [`r linguisticsdown::cond_cmpl("yː")`] - [`r linguisticsdown::cond_cmpl("ʏ")`] pair generates almost identical separability indices in F1-F2 and F1-F3 spaces, and increased separability for both F2-F3 and F1-F2-F3, which seems to signal the importance of all three cues.
+
+For the other comparisons, F1-F2 vs. F1-F3, and F1-F2 vs. F2-F3, the LMMs indicated significant negative changes for both comparisons for all but three vowel pairs: for the [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("ɪ")`], there was a significant effect of cue combination in the F1-F2 vs. F1-F3 comparison only ($\hat\beta = -1.02, SE = .007, p < .0001$), for the [`r linguisticsdown::cond_cmpl("yː")`] - [`r linguisticsdown::cond_cmpl("ʏ")`] and [`r linguisticsdown::cond_cmpl("æː")`] - [`r linguisticsdown::cond_cmpl("æ")`] vowel pairs, there was a significant effect in the F1-F2 vs. F2-F3 comparison only (for [`r linguisticsdown::cond_cmpl("yː")`] - [`r linguisticsdown::cond_cmpl("ʏ")`], $\hat\beta = .023, SE = .006, p < .0002$; for [`r linguisticsdown::cond_cmpl("æː")`] - [`r linguisticsdown::cond_cmpl("æ")`], $\hat\beta = -.014, SE = .005, p < .011$).<!--check this-->
+
 ```{r}
 #Calculate the category separability based on Xie & Jaeger 2020
 d.SwehVd.cat.separability.F0 <- rbind(
@@ -576,7 +580,7 @@ m.sep.O.F0 <- lmerTest::lmer(pairwise_separability ~ cue_dimension + (1|Talker),
 rm(d.SwehVd.centroids)
 ```
 ### Summary tables of GAMMs {#sec:SI-GAMMs}
-Tables \@ref(tab:m-F1-long), \@ref(tab:m.F1.front.short), \@ref(tab:m.F2.front.long), \@ref(tab:m.F2.front.short), \@ref(tab:m.F3.front.long), \@ref(tab:m.F3.front.short)    summarize the results of the GAMMs fit to neighboring contrasts.
+Tables \@ref(tab:m-F1-long), \@ref(tab:m.F1.front.short), \@ref(tab:m.F2.front.long), \@ref(tab:m.F2.front.short), \@ref(tab:m.F3.front.long), \@ref(tab:m.F3.front.short) summarize the results of the GAMMs fit to neighboring contrasts.
 
 \begin{table}[ht]
 \caption{\label{tab:m-F1-long}Model summary, coefficients for parametric and smooth terms for the high front long vowels predicting F1}
@@ -1365,551 +1369,4 @@ itsadug::plot_smooth(m.F3.paired, view = "timepoint", plot_all = "category", con
 # Code kept for reproducibility
 #gamtabs(m.duration.paired, caption='Model summary, coefficients for parametric and smooth terms', label = "tab:m.duration.paired")
 rm(m.F1.paired, m.F2.paired, m.F3.paired, m.duration.paired)
-```
-
-## Additional information on Study 2 {#sec:SI-SweDia}
-
-### Wordlist used for recording of SweDia {#sec:SI-SweDia-wordlist}
-Table \@ref(tab:word-list) lists the words used for recording of the SweDia database.
-
-\begin{table}
-\caption{\label{tab:word-list}Words recorded by talkers of Central Swedish for the SweDia database}
-\centering
-\begin{tabular}[t]{c|c|c}
-\hline
-Vowel IPA&Target words&Comment\\
-\hline
-`r linguisticsdown::cond_cmpl("[æː]")`&lär&\\
-\hline
-`r linguisticsdown::cond_cmpl("[øː]")`&blöt&\\
-\hline
-&söt&\\
-\hline
-&lös&\\
-\hline
-`r linguisticsdown::cond_cmpl("[ɛː]")`&läs&missing for ym4 and yw4\\
-\hline
-&nät&\\
-\hline
-&väg&recorded by ym4 only\\
-\hline
-`r linguisticsdown::cond_cmpl("[uː]")`&sot&\\
-\hline
-`r linguisticsdown::cond_cmpl("[ʉː]")`&lus&\\
-\hline
-`r linguisticsdown::cond_cmpl("[yː]")`&typ&\\
-\hline
-`r linguisticsdown::cond_cmpl("[oː]")`&lås&\\
-\hline
-&låt&recorded by ym4 only\\
-\hline
-`r linguisticsdown::cond_cmpl("[eː]")`&leta&\\
-\hline
-&gles&recorded by ym4 and yw4 only\\
-\hline
-`r linguisticsdown::cond_cmpl("[œː]")`&dör&\\
-\hline
-`r linguisticsdown::cond_cmpl("[iː]")`&dis&\\
-\hline
-`r linguisticsdown::cond_cmpl("[ɑː]")`&lat&\\
-\hline
-&tak&recorded by ym4 and yw4 only\\
-\hline
-`r linguisticsdown::cond_cmpl("[ɪ]")`&sitt&\\
-\hline
-&disk&recorded by ym4 and yw4 only\\
-\hline
-&fisk&\\
-\hline
-`r linguisticsdown::cond_cmpl("[ɔ]")`&lott&\\
-\hline
-&såll&\\
-\hline
-`r linguisticsdown::cond_cmpl("[ʏ]")`&flytta&\\
-\hline
-&tysk&\\
-\hline
-&sytt&\\
-\hline
-`r linguisticsdown::cond_cmpl("[a]")`&lass&\\
-\hline
-&tack&recorded by ym4 only\\
-\hline
-`r linguisticsdown::cond_cmpl("[ɛ]")`&lätt&\\
-\hline
-&lett&\\
-\hline
-&vägg&recorded by ym4 only\\
-\hline
-`r linguisticsdown::cond_cmpl("[æ]")`&särk&recorded by ym4 and yw4 only\\
-\hline
-`r linguisticsdown::cond_cmpl("[ɵ]")`&ludd&\\
-\hline
-`r linguisticsdown::cond_cmpl("[œ]")`&dörr&\\
-\hline
-`r linguisticsdown::cond_cmpl("[ø]")`&blött&\\
-\hline
-`r linguisticsdown::cond_cmpl("[ʊ]")`&snott&\\
-\hline
-\end{tabular}
-\end{table}
-
-### Additional visualizations of the SweDia materials {#sec:SI-raw-Swedia}
-(ref:SI-raw-Swedia) The SweDia reference talkers' vowel data along F1-F2, in unnormalized Hertz (*left*) and Nearey's uniform scaling space (*right*). Points show the productions of each of the 21 Central Swedish vowels by the 8 (4 female) L1 reference talkers in the database. Vowel labels indicate vowel means across talkers. Vowels that mismatched intended label are excluded (`r signif((d.SwehVd %>% filter(Transcribed_vowel != "targeted") %>% nrow() / d.SwehVd %>% nrow()) * 100)`% of all recordings).
-
-```{r SI-raw-Swedia, fig.width=base.width*4.5, fig.height=base.height*3.5, out.width='90%', fig.align='center', fig.pos="ht", fig.cap="(ref:SI-raw-Swedia)"}
-p %+%
-  (d.SweDia2000.forStudy.long %>%
-     filter(Normalization.Type %in% c("no normalization (Hz)", "Nearey's uniform scaling (log)"), F1 < 1000, timepoint %in% c(35, 50, 65)) %>%
-     # Get the geometric mean F1-F2 across the five time points
-     group_by(Normalization.Type, Talker, Gender, category, Token, Quantity) %>%
-     summarise(across(c(F1, F2, F3, Duration), ~ mean(.x))))
-```
-
-(ref:SI-Swedia-normalized) The SweDia reference talkers' vowel data in F1-F2 Nearey's uniform scaling space, separated by quantity. Ellipses show bivariate Gaussian 95% confidence interval of vowel means. Vowel labels indicate vowel means across female and male talkers.
-
-```{r SI-Swedia-normalized, fig.width=base.width*4.5, fig.height=base.height*2.5, fig.align='center', fig.pos="ht", fig.cap="(ref:SI-Swedia-normalized)"}
-p.normalized %+%
-  (d.SweDia2000.forStudy.long %>%
-  filter(Normalization.Type == "Nearey's uniform scaling (log)", timepoint %in% c(35, 50, 65)) %>%
-  # Get the geometric mean F1-F2 across the five time points
-  group_by(Normalization.Type, Talker, Gender, category, Token, Quantity) %>%
-  summarise(across(c(F1, F2, F3, Duration), ~ mean(.x))))
-```
-
-(ref:SI-swe-vowels-all-cues-nearey-swedia) The SweDia vowels in Nearey's uniform scaling space. Points show recordings of each of the 21 Central Swedish vowels by the talkers in the database in all five cue spaces, averaged across the three midpoints. Vowel labels indicate vowel means across talkers. Ellipses show bivariate Gaussian 95% confidence interval of vowel means. Note that, unlike in Figure \@ref(fig:swe-vowels), axis directions are not reversed. Vowels that mismatched the intended label are excluded (`r signif((d.SwehVd %>% filter(Transcribed_vowel != "targeted") %>% nrow() / d.SwehVd %>% nrow()) * 100)`% of all recordings).
-
-```{r SI-swe-vowels-all-cues-nearey-swedia, fig.width=base.width*4+.5, fig.height=base.height*4+.5, out.width = '100%', fig.align='center', fig.pos="ht", fig.cap="(ref:SI-swe-vowels-all-cues-nearey-swedia)"}
-set.seed(63720472)
-
-p.matrix.cues %+%
-  (d.SweDia2000.forStudy.long %>%
-     filter(Normalization.Type == "Nearey's uniform scaling (log)", timepoint %in% c(35, 50, 65)) %>%
-     # Get the geometric mean F1-F2 across the five time points
-     group_by(Normalization.Type, Talker, Gender, category, Token, Quantity) %>%
-     summarise(across(c(F0, F1, F2, F3, Duration), ~ mean(.x))) %>%
-     # For plotting reasons, randomly select 3 tokens of each category
-     group_by(Talker, category) %>%
-     slice_sample(n = 3))
-```
-
-(ref:trajectories-swedia) The trajectory of all vowels in the SweDia reference materials across the five time points, along F1-F2. The arrow indicates the direction of the trajectory and ends at 80% into the vowel. The vowel label is placed at the third time-point, at vowel mid-point (50%).
-
-```{r trajectories-swedia, fig.width=base.width*3.5, fig.height=base.height*2, out.width='90%', fig.align='center', fig.pos="ht", fig.cap="(ref:trajectories-swedia)"}
-d.SweDia2000.forStudy.long %>%
-  filter(Normalization.Type == "Nearey's uniform scaling (log)") %>%
-  mutate(timepoint = as.character(timepoint)) %>%
-  group_by(Talker, category, timepoint, Quantity) %>%
-  summarise(across(c(F2, F1), ~mean(.x))) %>%
-  group_by(category, timepoint, Quantity) %>%
-  summarise(across(c(F2, F1), ~mean(.x))) %>%
-  ggplot(
-    aes(
-      x = F2,
-      y = F1,
-      color = category,
-      group = NULL)) +
-  geom_path(
-    alpha = .5,
-    arrow = arrow(ends = "last", type = "closed", angle = "22.5", length = unit(.1, "cm"))) +
-  geom_label(
-    data = . %>%
-      filter(timepoint == "50"),
-    mapping = aes(
-      colour = category,
-      label = category,
-      fontface = ifelse(category %in% levels.vowel.IPA.swe.long, 2, 1)),
-    alpha = .6,
-    size = 4,
-    label.size = NA,
-    label.padding = unit(.01, "cm")) +
-  # geom_point(
-  #   data = d.F2d %>%
-  #     #get the mean F1 F2 at 10% into d-closure across talkers
-  #     summarise(
-  #       F1 = mean(F1_closure),
-  #       F2 = mean(F2_closure)),
-  #   color = "black",
-  #   alpha = .6) +
-  scale_color_manual(name = "category", values = colors.vowel.swe) +
-  scale_x_reverse("F2", position = "top", scales::pretty_breaks(n = 6)) +
-  scale_y_reverse("F1", position = "right", scales::pretty_breaks(n = 6)) +
-  guides(color = "none") +
-  facet_wrap( ~ Quantity, labeller = label_wrap_gen(multi_line=FALSE))
-```
-
-### Visualization of the orthogonal projection ratio
-Figure \@ref(fig:SI-op) illustrates the orthogonal projection ratio.
-
-(ref:SI-op) Illustration of orthogonal projection ratio. Examples of target categories $V_{vowel}$ (in cyan), and their respective anchor categories, $U_{anchor}$ and $W_{anchor}$ (in red), from the SwehVd database. The $op$ measures the relative distance of $V_{vowel}$ to its anchors, as represented by the lines.
-
-```{r SI-op, fig.width=base.width*2, fig.height=base.height*2, out.width='50%', fig.align='center', fig.pos='ht', fig.cap="(ref:SI-op)"}
-d.SwehVd.forStudy.long.static %>%
-  # Filter down to test folds
-  filter(Normalization.Type == "Nearey's uniform scaling (log)", category %in% c("[ʉː]", "[oː]", "[ɪ]", "[eː]", "[æː]", "[ɑː]", "[ɛː]", "[øː]")) %>%
-  mutate(anchor = ifelse(category %in% c("[ʉː]", "[ɛː]", "[øː]"), "vowel", "anchor"),
-         op_pair = case_when(category %in% c("[ʉː]", "[oː]", "[ɪ]") ~ "A",
-                             category %in% c("[eː]", "[ɑː]", "[øː]") ~ "B",
-                             category %in% c("[eː]", "[æː]", "[ɛː]") ~ "C")) %>%
-  ggplot(
-    aes(
-      x = F2, 
-      y = F1)) +
-  stat_ellipse(
-    mapping = aes(
-      colour = anchor,
-      fill = anchor,
-      group = interaction(anchor, category)),
-    geom = "polygon",
-    alpha = .4) +
-  geom_path(data =
-              . %>%
-              filter(category %in% c("[ɪ]", "[ʉː]", "[oː]")) %>%
-              mutate(
-                category = factor(category, levels = c("[ɪ]", "[ʉː]", "[oː]")),
-                group = "A") %>%
-              group_by(category, group, Normalization.Type) %>%
-              summarise(across(c(F1, F2), ~ mean(.x))),
-            linetype = "dotted") +
-  geom_path(data =
-              . %>%
-              filter(category %in% c("[eː]", "[øː]", "[ɑː]")) %>%
-              mutate(
-                category = factor(category, levels = c("[eː]", "[øː]", "[ɑː]")),
-                group = "B") %>%
-              group_by(category, group, Normalization.Type) %>%
-              summarise(across(c(F1, F2), ~ mean(.x))),
-            linetype = "dashed") +
-  geom_path(data =
-              . %>%
-              filter(category %in% c("[eː]", "[ɛː]", "[æː]")) %>%
-              mutate(
-                category = factor(category, levels = c("[eː]", "[ɛː]", "[æː]")),
-                group = "C") %>%
-              group_by(category, group, Normalization.Type) %>%
-              summarise(across(c(F1, F2), ~ mean(.x)))) +
-  # Add between-talker mean
-  geom_label(
-    data =
-      . %>%  
-      mutate(
-        anchor = ifelse(category %in% c("[ʉː]", "[ɛː]", "[øː]"), "vowel", "anchor")) %>%
-      group_by(category, anchor, Normalization.Type) %>%
-      summarise(across(c(F1, F2), ~ mean(.x))),
-    mapping = aes(
-      colour = anchor,
-      label = category),
-    alpha = .8,
-    size = 5,
-    label.size = NA,
-    label.padding = unit(.06, "cm")) +
-  scale_x_reverse("F2", position = "top", scales::pretty_breaks(n = 4)) +
-  scale_y_reverse("F1", position = "right", scales::pretty_breaks(n = 4)) +
-  guides(alpha = "none", color = "none", shape = "none", fill = "none")
-#ggsave(file = "../../figures/p.png", width = 9, height = 5, dpi=1200)
-```
-
-<!--### Sampling-with-replacement approach to op
-The two datasets were of unequal sample sizes: N = `r nrow(d.SwehVd %>% distinct(Talker, category, Token))` datapoints for SwehVd, and N = `r nrow(d.SweDia2000.forStudy %>% distinct(Talker, category, Token))` datapoints for SweDia. In order to address this imbalance, the SwehVd materials were down-sampled to approximate the size of the SweDia for the calculation of the $op$. The sampling-with-replacement procedure included 1000 bootstrapping rounds. At each round, a sample of 840 tokens from the SwehVd was extracted by first randomly selecting 8 talkers (4 female) from the database, and then randomly selecting 5 tokens per vowel from each talker, with replacement. The $op$ was calculated at each round, and finally averaged across the 1000 rounds for a comparison against the $op$ calculated for the SweDia materials.-->
-
-```{r}
-# Set seed for reproducibility
-set.seed(15497221)
-
-# Number of bootstrap rounds
-n_bootstrap_rounds <- 1000
-
-# Number of talkers to select in each round
-n_talkers_per_gender <- 4
-
-# Number of tokens to select in each round per category
-n_tokens_per_category <- 5
-
-# Create a function to perform downsampling and store values
-perform_bootstrap_round <- function(data) {
-  # Randomly select 4 female and 4 male talkers
-  selected_talkers <- data %>%
-    group_by(Gender) %>%
-    slice_sample(n = n_talkers_per_gender, replace = TRUE) %>%
-    ungroup()
-
-  # Randomly select 5 tokens per category
-  selected_tokens <- selected_talkers %>%
-    group_by(category) %>%
-    slice_sample(n = n_tokens_per_category, replace = TRUE) %>%
-    ungroup()
-
- # Extract and store the F1 and F2 values, category, and bootstrap round
-  values <- selected_tokens %>%
-    select(Talker, category, Word, F1, F2) %>%
-    mutate(bootstrap_round = cur_group_id()) %>%
-    as.data.frame()
-
-  return(values)
-}
-
-d.SwehVd.forStudy.opr <- d.SwehVd.forStudy.long.static %>%
-  filter(Normalization.Type == "Nearey's uniform scaling (log)")
-
-# Perform downsampling and bootstrap
-bootstrap_results <- map(
-  1:n_bootstrap_rounds,
-  ~ perform_bootstrap_round(d.SwehVd.forStudy.opr)
-)
-
-# Create a dataframe with bootstrap results in long format
-bootstrap_SwehVd <- bind_rows(bootstrap_results, .id = "bootstrap_round")
-```
-```{r}
-get_centroids <- . %>%
-  group_by(Talker, category) %>% 
-  # compute mean F1 and F2
-  summarise(cenF1 = mean(F1),
-            cenF2 = mean(F2)) %>%
-  # rearrange in columns
-  pivot_wider(names_from = category, 
-              values_from = c(cenF1, cenF2)) %>%
-  ungroup() %>%
-  left_join(bootstrap_SwehVd, by = "Talker") %>%
-  group_by(category) %>%
-  # for each row i.e. for each observation
-  rowwise() %>%
-  # calculate orth.proj.ratio
-  mutate(orth_proj = case_when(category == "[ʏ]" ~ orthogonal_projection(c(F1, F2), c(`cenF1_[ɑː]`, `cenF2_[ɑː]`), c(`cenF1_[ɪ]`, `cenF2_[ɪ]`)),
-                               category == "[ʉː]" ~ orthogonal_projection(c(F1, F2), c(`cenF1_[ɪ]`, `cenF2_[ɪ]`), c(`cenF1_[oː]`, `cenF2_[oː]`)),
-                               category == "[ɛː]" ~ orthogonal_projection(c(F1, F2), c(`cenF1_[eː]`, `cenF2_[eː]`), c(`cenF1_[æː]`, `cenF2_[æː]`)),
-                               category == "[øː]" ~ orthogonal_projection(c(F1, F2), c(`cenF1_[eː]`, `cenF2_[eː]`), c(`cenF1_[ɑː]`, `cenF2_[ɑː]`)),
-                               category == "[œ]" ~ orthogonal_projection(c(F1, F2), c(`cenF1_[ɵ]`, `cenF2_[ɵ]`), c(`cenF1_[œː]`, `cenF2_[œː]`)),
-                               category == "[ɔ]" ~ orthogonal_projection(c(F1, F2), c(`cenF1_[ɑː]`, `cenF2_[ɑː]`), c(`cenF1_[oː]`, `cenF2_[oː]`)),
-                               TRUE ~ NA))
-
-d.SwehVd.opr <-
-  bootstrap_SwehVd %>% 
-  # choose the anchor vowels
-  filter(category %in% c("[ɪ]", "[ʏ]", "[yː]", "[ɵ]", "[eː]", "[ɛː]", "[æː]", "[œː]", "[œ]", "[ɑː]", "[oː]", "[øː]", "[ʉː]", "[ɔ]")) %>% 
-  group_by(bootstrap_round) %>%
-  get_centroids() %>%  
-  # Then summarise across all bootstrap rounds
-  group_by(category, F1, F2, Talker) %>%
-  summarise(orth_proj = mean(orth_proj, na.rm = T))
-```
-
-### Summary tables for LMMs fit to orthogonal projection ratio {#sec:SI-LMMs}
-
-\begin{table}
-
-\caption{LMM predicting orthogonal projection ratio from database}
-\centering
-\begin{tabular}[t]{lcccc}
-\toprule
-  & `r linguisticsdown::cond_cmpl("[ʏ]")` & `r linguisticsdown::cond_cmpl("[ʉː]")` & `r linguisticsdown::cond_cmpl("[ɛː]")` & `r linguisticsdown::cond_cmpl("[øː]")`\\
-\addlinespace[0.5em]
-\multicolumn{5}{l}{\textit{}}\\
-\midrule \hspace{1em}(Intercept) & 0.670 & -0.555 & 0.440 & 0.017\\
-\hspace{1em} & se = 0.068 & se = 0.056 & se = 0.078 & se = 0.057\\
-\hspace{1em} & t-value = 9.881 & t-value = -9.896 & t-value = 5.651 & t-value = 0.294\\
-\hspace{1em} & p.value = <0.001 & p.value = <0.001 & p.value = <0.001 & p.value = 0.769\\
-\hspace{1em} SwehVd & 0.189 & 0.115 & 0.283 & 0.204\\
-\hspace{1em} & se = 0.075 & se = 0.062 & se = 0.086 & se = 0.063\\
-\hspace{1em} & t-value = 2.524 & t-value = 1.856 & t-value = 3.307 & t-value = 3.212\\
-\hspace{1em} & p.value = 0.012 & p.value = 0.064 & p.value = 0.001 & p.value = 0.001\\
-\hspace{1em}SD (Intercept Talker) & 0.189 & 0.156 & 0.212 & 0.160\\
-\hspace{1em}SD (Observations) & 0.091 & 0.046 & 0.139 & 0.071\\
-\addlinespace[0.5em]
-\multicolumn{5}{l}{\textit{}}\\
-\toprule
-  & `r linguisticsdown::cond_cmpl("[ø]")` & `r linguisticsdown::cond_cmpl("[œː]")` & `r linguisticsdown::cond_cmpl("[ɔ]")` & \\
-\midrule \hspace{1em}(Intercept) & -0.276 & -0.470 & -0.376 & \\
-\hspace{1em} & se = 0.072 & se = 0.163 & se = 0.100 & \\
-\hspace{1em} & t-value = -3.830 & t-value = -2.889 & t-value = -3.773 & \\
-\hspace{1em} & p.value = <0.001 & p.value = 0.004 & p.value = <0.001 & \\
-\hspace{1em} SwehVd & 0.249 & 0.756 & 0.457 & \\
-\hspace{1em} & se = 0.079 & se = 0.178 & se = 0.110 & \\
-\hspace{1em} & t-value = 3.163 & t-value = 4.249 & t-value = 4.161 & \\
-\hspace{1em} & p.value = 0.002 & p.value = <0.001 & p.value = <0.001 & \\
-\hspace{1em}SD (Intercept Talker) & 0.189 & 0.426 & 0.271 & \\
-\hspace{1em}SD (Observations) & 0.132 & 0.304 & 0.228 & \\
-\bottomrule
-\end{tabular}
-\end{table}
-
-
-```{r}
-#panels <- list(
-# "first line" = list("A" = m.Y, "B" = m.U, "C" = m.Ä, "D" = m.ÖÖ),
-# "second line" = list("A" = m.Ö, "B" = m.ÖR, "C" = m.Å))
-#modelsummary::modelsummary(panels, output = "latex", title = "LMM predicting orthogonal projection ratio from database", estimate = "{estimate}", statistic = c("se = {std.error}", "t-value = {statistic}", "p.value = {p.value}"), shape = "rbind", gof_map = NA)
-rm(m.Y, m.Ä, m.ÖR, m.U, m.ÖÖ, m.Ö, m.Å)
-```
-```{r subset-data-for-opr}
-#Alternative downsampling approach
-# set.seed(15497221)
-# 
-# d.SwehVd.forStudy.opr <- d.SwehVd.forStudy.long %>%
-#   filter(Normalization.Type == "Nearey's uniform scaling (log)", timepoint == 50)
-# 
-# d.SweDia2000.forStudy.opr <- d.SweDia2000.forStudy.long %>%
-#   filter(Normalization.Type == "Nearey's uniform scaling (log)", timepoint == 50)
-# 
-# selected_talkers <- d.SwehVd.forStudy.opr %>%
-#   select(Gender, Talker) %>%
-#   distinct() %>%
-#   group_by(Gender) %>%
-#   slice_sample(n = 4, replace = F) %>%
-#   pull(Talker)
-# 
-# d.SwehVd.forStudy.opr %<>%
-#   filter(Talker %in% selected_talkers) %>%
-#   group_by(category, Talker) %>%
-#   slice_sample(n = 5, replace = F)
-# 
-# d.SwehVd.SweDia2000.opr <- rbind(d.SwehVd.forStudy.opr, d.SweDia2000.forStudy.opr)
-# 
-# # Instead sample 36 tokens per category from the entire database of all talkers
-# d.SwehVd.SweDia2000.opr_by_category <- d.SwehVd.forStudy.long %>%
-#   filter(Normalization.Type == "Nearey's uniform scaling (log)", timepoint == 50) %>%
-#   group_by(category, Gender) %>%
-#   slice_sample(n = 18, replace = F) %>%
-#   rbind(d.SweDia2000.forStudy.opr)
-# 
-
-# d.SwehVd.SweDia2000.opr.noBootstrap <- rbind(d.SwehVd.forStudy.long %>%
-#                                                filter(Normalization.Type == "Nearey's uniform scaling (log)", timepoint == 50), 
-#                                              d.SweDia2000.forStudy.long %>%
-#                                                filter(Normalization.Type == "Nearey's uniform scaling (log)", timepoint == 50))
-# 
-# centroids.noBootstrap <- d.SwehVd.SweDia2000.opr.noBootstrap %>%
-#   # choose the anchor vowels
-#   filter(category %in% c("[ɪ]", "[ʏ]", "[yː]", "[ɵ]", "[eː]", "[ɛː]", "[æː]", "[œː]", "[œ]", "[ɑː]", "[a]", "[oː]", "[øː]", "[ø]", "[ʉː]", "[ɔ]")) %>%
-#   # for each speaker and vowel
-#   group_by(Talker, category) %>%
-#   # compute mean F1 and F2
-#   summarise(cenF1 = mean(F1),
-#             cenF2 = mean(F2)) %>%
-#   # rearrange in columns
-#   pivot_wider(names_from = category,
-#               values_from = c(cenF1, cenF2)) %>%
-#   ungroup()
-# 
-# d.SwehVd.SweDia2000.opr.noBootstrap %>%
-#   # add the centroids %>%
-#   left_join(centroids.noBootstrap, by = "Talker")
-# 
-# d.orth.subset.noBootstrap <- d.SwehVd.SweDia2000.opr.noBootstrap %>%
-#   group_by(category, Database) %>%
-#  # for each row i.e. for each observation
-#   rowwise() %>%
-#   # calculate orth.proj.ratio
-#   mutate(orth_proj = case_when(category == "[ʏ]" ~ orthogonal_projection(c(F1, F2), c(`cenF1_[ɑː]`, `cenF2_[ɑː]`), c(`cenF1_[ɪ]`, `cenF2_[ɪ]`)),
-#                                category == "[ʉː]" ~ orthogonal_projection(c(F1, F2), c(`cenF1_[ɪ]`, `cenF2_[ɪ]`), c(`cenF1_[oː]`, `cenF2_[oː]`)),
-#                                category == "[ɛː]" ~ orthogonal_projection(c(F1, F2), c(`cenF1_[eː]`, `cenF2_[eː]`), c(`cenF1_[æː]`, `cenF2_[æː]`)),
-#                                category == "[øː]" ~ orthogonal_projection(c(F1, F2), c(`cenF1_[eː]`, `cenF2_[eː]`), c(`cenF1_[ɑː]`, `cenF2_[ɑː]`)),
-#                                category == "[ø]" ~ orthogonal_projection(c(F1, F2), c(`cenF1_[yː]`, `cenF2_[yː]`), c(`cenF1_[a]`, `cenF2_[a]`)),
-#                                category == "[œ]" ~ orthogonal_projection(c(F1, F2), c(`cenF1_[ɵ]`, `cenF2_[ɵ]`), c(`cenF1_[œː]`, `cenF2_[œː]`)),
-#                                category == "[ɔ]" ~ orthogonal_projection(c(F1, F2), c(`cenF1_[ɑː]`, `cenF2_[ɑː]`), c(`cenF1_[oː]`, `cenF2_[oː]`)),
-#                                TRUE ~ NA)) %>%
-#   ungroup() %>%
-#   filter(category %in% c("[ʏ]", "[ɛː]", "[œ]", "[ʉː]", "[øː]", "[ø]", "[ɔ]"))
-# 
-# p.orth %+%
-#   (d.orth.subset.noBootstrap %>%
-#      group_by(Database, category) %>%
-#      mutate(
-#        # category = factor(category, levels = c("[ʏ]", "[ɛː]", "[œ]", "[ɔ]", "[ʊ]", "[ɵ]"), labels =  c("[ʏ] [ɑː]-[ɪ]", "[ɛː] [eː]-[æː]", "[œ] [ɵ]-[œː]", "[ɔ] [ɑː]-[oː]", "[ʊ] [œː]-[oː]", "[ɵ] [ɛ]-[uː]")),
-#        #median = median(orth_proj),
-#        ci = list(enframe(Hmisc::smean.cl.boot(orth_proj)))) %>%
-#      unnest(ci) %>%
-#      spread(name, value) %>%
-#      group_by(Database, category) %>%
-#      summarise(
-#        mean_CI_lower = mean(Lower),
-#        mean_CI_upper = mean(Upper),
-#        mean = mean(Mean)))
-```
-```{r}
-# d.orth.subset.noBootstrap %>%
-#   ggplot +
-#   aes(y = orth_proj, x = Database) +
-#   geom_boxplot() +
-#   facet_wrap(~category, scales = "free")
-```
-
-```{r}
-# Add code to write csv.file for harrington
-# write.csv(
-#   d.Swedish,
-#   file = "../../../data/phonetic vowel statistics/Swedish/Published databases/Swedish_vowels_Persson2023_Kuronen2000.csv",
-#   row.names = FALSE, quote = FALSE)
-```
-```{r}
-# d.Swedish <- d.Kuronen2000 %>%
-#   rbind(
-#     d.SwehVd %>%
-#       # get only mid-point for comparability to kuronen
-#       filter(timepoint == 50, Transcribed_vowel == "targeted") %>%
-#       select(c(Talker, Age, Gender, category, Quantity, Word, Token, F1, F2)) %>%
-#       mutate(
-#         Database = "Persson2021"),
-#     d.SweDia2000 %>%
-#       # get only mid-point for comparability to kuronen
-#       filter(timepoint == 50) %>%
-#       select(c(Database, Talker, Age, Gender, category, Quantity, Word, Token, F1, F2))) %>%
-#     select(c(Database, Talker, Age, Gender, category, Quantity, Word, Token, F1, F2))
-# 
-# p.db.comparison <- 
-#   d.Swedish %>%
-#   filter(Gender == "male", Database != "SweDia") %>%
-#   ggplot(
-#     aes(
-#       x = F2,
-#       y = F1, 
-#       color = category,
-#   #shape = Gender,
-#   linetype = Database)) +
-#   stat_ellipse() +
-#   # Add between-talker mean
-#   geom_label(
-#     data =
-#       ~ .x %>%
-#       group_by(category, Quantity, Database) %>%
-#       summarise(across(c(F1, F2), ~ mean(.x))),
-#     mapping = aes(
-#       colour = category,
-#       label = category),
-#       #fontface = ifelse(Database == "SweDia", 2, 1)),
-#     alpha = .8,
-#     size = 4,
-#     label.size = NA,
-#     label.padding = unit(.06, "cm")) +
-#   #geom_point(alpha = .4) +
-#   scale_color_manual(name = "category", values = colors.vowel.swe) +
-#   scale_x_reverse() +
-#   scale_y_reverse() +
-#   guides(color = "none") +
-#   facet_grid(Database ~ Quantity)
-# p.db.comparison
-```
-
-```{r}
-# p.vowel.movements %+%
-#   (d.Swedish %>%
-#      filter(Gender == "male", Database != "SweDia") %>%
-#      group_by(Database, Talker, category, Quantity) %>%
-#      summarise(across(c(F2, F1), ~mean(.x))) %>%
-#      group_by(Database, category, Quantity) %>%
-#      summarise(across(c(F2, F1), ~mean(.x)))) +
-#   geom_label(
-#     data =
-#       ~ .x %>%
-#       filter(Database == "Kuronen2000") %>%
-#       group_by(category, Quantity, Database) %>%
-#       summarise(across(c(F1, F2), ~ mean(.x))),
-#     mapping = aes(
-#       colour = category,
-#       label = category),
-#     fontface = 2,
-#     alpha = .4,
-#     size = 4,
-#     label.size = NA,
-#     label.padding = unit(.06, "cm"))
 ```
