--- a/output/papers/latex-stuff/librarySweAcoust.bib
+++ b/output/papers/latex-stuff/librarySweAcoust.bib
@@ -93,7 +93,7 @@
 @misc{boersma-weenink2022,
   title = {Praat: {{Doing}} Phonetics by Computer [{{Computer}} Program]},
   author = {Boersma, Paul and Weenink, David},
-  year = {1992--2022}
+  year = {1992-2022}
 }
 
 @article{boberg2019,
