edits to text, refs and si for round 2

--- a/output/papers/latex-stuff/librarySweAcoust.bib
+++ b/output/papers/latex-stuff/librarySweAcoust.bib
@@ -330,6 +330,23 @@
   pages={33--48}
 }
 
+@article{fabricius2009,
+  title = {A Comparison of Three Speaker-Intrinsic Vowel Formant Frequency Normalization Algorithms for Sociophonetics},
+  author = {Fabricius, Anne and Watt, Dominic and Johnson, Daniel Ezra},
+  year = {2009},
+  month = oct,
+  journal = {Language Variation and Change},
+  volume = {21},
+  number = {3},
+  pages = {413--435},
+  issn = {0954-3945, 1469-8021},
+  doi = {10.1017/S0954394509990160},
+  urldate = {2022-08-29},
+  abstract = {This article evaluates a speaker-intrinsic vowel formant frequency normalization algorithm initially proposed in Watt \& Fabricius (2002). We compare how well this routine, known as the S-centroid procedure, performs as a sociophonetic research tool in three ways: reducing variance in area ratios of vowel spaces (by attempting to equalize vowel space areas); improving overlap of vowel polygons; and reproducing relative positions of vowel means within the vowel space, compared with formant data in raw Hertz. The study uses existing data sets of vowel formant data from two varieties of English, Received Pronunciation and Aberdeen English (northeast Scotland). We conclude that, for the data examined here, the S-centroid W\&F procedure performs at least as well as the two speakerintrinsic, vowel-extrinsic, formant-intrinsic normalization methods rated as best performing by Adank (2003): Lobanov's (1971) z-score procedure and Nearey's (1978) individual log-mean procedure (CLIHi4 in Adank [2003], CLIHi2 as tested here), and in some test cases better than the latter.},
+  langid = {english},
+  file = {/Users/anpe7128/Zotero/storage/7TFKMKI2/Fabricius et al. - 2009 - A comparison of three speaker-intrinsic vowel form.pdf}
+}
+
 @article{fant1959,
   title = {Acoustic Analysis and Synthesis of Speech with Applications to Swedish},
   author = {Fant, Gunnar},
@@ -371,6 +388,16 @@
   pages = {001--019},
   langid = {english},
   file = {/Users/anpe7128/Zotero/storage/SPNIBXAS/Fant - Feature analysis of Swedish vowels - a revisit.pdf}
+}
+
+@article{flynn-foulkes2011,
+  title = {Comparing Vowel Formant Normalization Methods},
+  author = {Flynn, Nicholas and Foulkes, Paul},
+  year = {2011},
+  journal = {Proceedings of ICPhS XVII, Hong Kong},
+  number = {August},
+  pages = {683--686},
+  keywords = {vowel}
 }
 
 @article{fujimura1967,
@@ -511,6 +538,15 @@
   pages = {S50-S50},
   issn = {0001-4966, 1520-8524},
   doi = {10.1121/1.2023837}
+}
+
+@article{heselwood-howard2008,
+  title={Clinical phonetic transcription},
+  author={Heselwood, Barry and Howard, Sara},
+  journal={The handbook of clinical linguistics},
+  pages={381--399},
+  year={2008},
+  publisher={Wiley Online Library}
 }
 
 @article{hillenbrand1995,
@@ -667,6 +703,17 @@
   author = {Raymond D. Kent and Houri K. Vorperian}
 }
 
+@article{kerswill-wright1990,
+  title={The validity of phonetic transcription: Limitations of a sociolinguistic research tool},
+  volume={2},
+  doi={10.1017/S0954394500000363},
+  number={3},
+  journal={Language Variation and Change},
+  author={Kerswill, Paul and Wright, Susan},
+  year={1990},
+  pages={255–275}
+}>
+
 @book{kotsinas1994,
   author={Kotsinas, Ulla-Britt},
   title={Ungdomsspr{\aa}k {[Youth language]}},
@@ -725,6 +772,20 @@
   langid = {english}
 }
 
+@book{labov2010,
+  title = {Principles of Linguistic Change. 2: {{Social}} Factors},
+  shorttitle = {Principles of Linguistic Change. 2},
+  author = {Labov, William},
+  year = {2010},
+  series = {Language in Society},
+  edition = {repr},
+  number = {29},
+  publisher = {{Wiley-Blackwell}},
+  address = {{Chichester}},
+  isbn = {978-0-631-17916-0},
+  langid = {english}
+}
+
 @book{labov-boberg2005,
   title = {The atlas of North American English: Phonetics, phonology, and sound change},
   author = {Labov, William and Ash, Sharon and Boberg, Charles},
@@ -774,6 +835,17 @@
   issn = {0928-0030},
   langid = {english},
   file = {/Users/anpe7128/Zotero/storage/PNYSIHXY/Leinonen - An Acoustic Analysis of Vowel Pronunciation in Swe.pdf}
+}
+
+@article{leung2016,
+  title={Acoustic characteristics of clearly spoken English tense and lax vowels},
+  author={Leung, Keith KW and Jongman, Allard and Wang, Yue and Sereno, Joan A},
+  journal={The Journal of the Acoustical Society of America},
+  volume={140},
+  number={1},
+  pages={45--58},
+  year={2016},
+  publisher={Acoustical Society of America}
 }
 
 @article{liljencrants-lindblom1972,
@@ -902,6 +974,16 @@
   journal={Urban Matters},
   pages={179},
   year={2021}
+}
+
+@inproceedings{nycz2013,
+  title={Best practices in measuring vowel merger},
+  author={Nycz, Jennifer and Hall-Lew, Lauren},
+  booktitle={Proceedings of meetings on acoustics},
+  volume={20},
+  number={1},
+  year={2013},
+  organization={AIP Publishing}
 }
 
 @inproceedings{pelzer-boersma2019,
@@ -1169,6 +1251,17 @@ year = {2018}
   volume = {14},
   number = {4},
   pages = {001--018}
+}
+
+@article{stemberger-bernhardt2020,
+  title={Phonetic transcription for speech-language pathology in the 21st century},
+  author={Stemberger, Joseph Paul and Bernhardt, Barbara May},
+  journal={Folia Phoniatrica et Logopaedica},
+  volume={72},
+  number={2},
+  pages={75--83},
+  year={2020},
+  publisher={S. Karger AG Basel, Switzerland}
 }
 
 @article{stevens-house1963,
